# llaisys

./: .gitignore  LICENSE  README.md  README_ZN.md  xmake.lua
.github/workflows/: build.yaml
include/: llaisys.h
include/llaisys/: ops.h  runtime.h  tensor.h
include/llaisys/models/: qwen2.h
python/: setup.cfg
python/llaisys/: __init__.py  ops.py  runtime.py  tensor.py
python/llaisys/libllaisys/: __init__.py  llaisys_types.py  ops.py  qwen2.py  runtime.py  tensor.py
python/llaisys/models/: __init__.py  qwen2.py
src/: utils.hpp
src/core/: core.hpp  llaisys_core.hpp
src/core/allocator/: allocator.hpp  naive_allocator.cpp  naive_allocator.hpp
src/core/context/: context.cpp  context.hpp
src/core/runtime/: runtime.cpp  runtime.hpp
src/core/storage/: storage.cpp  storage.hpp
src/device/: device_resource.hpp  runtime_api.cpp  runtime_api.hpp
src/device/cpu/: cpu_resource.cpp  cpu_resource.hpp  cpu_runtime_api.cpp
src/device/nvidia/: nvidia_resource.cu  nvidia_resource.cuh  nvidia_runtime_api.cu  utils.cuh
src/llaisys/: llaisys_tensor.hpp  ops.cc  runtime.cc  tensor.cc
src/llaisys/models/: qwen2.cc
src/models/qwen2/: qwen2_impl.cpp  qwen2_impl.hpp
src/ops/: ops.hpp
src/ops/add/: op.cpp  op.hpp
src/ops/argmax/: op.cpp  op.hpp
src/ops/linear/: op.cpp  (+1 more)
src/tensor/: tensor.cpp  tensor.hpp
src/utils/: check.hpp  types.cpp  types.hpp
test/: test_infer.py  test_runtime.py  test_tensor.py  test_utils.py
test/ops/: add.py  argmax.py  embedding.py  linear.py  rms_norm.py  rope.py  self_attention.py  swiglu.py
xmake/: cpu.lua  nvidia.lua
(+50 files in other folders)
